use distclean int JIT test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,15 +108,15 @@ jobs:
       env:
         CC: ${{ steps.install_cc.outputs.cc }}
       run: |
-            make ENABLE_JIT=1 clean && make ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_EXT_A=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_EXT_F=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_EXT_C=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_EXT_M=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_Zba=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_Zbb=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_Zbc=0 ENABLE_JIT=1 check -j$(nproc)
-            make ENABLE_JIT=1 clean && make ENABLE_Zbs=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_EXT_A=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_EXT_F=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_EXT_C=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_EXT_M=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_Zba=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_Zbb=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_Zbc=0 ENABLE_JIT=1 check -j$(nproc)
+            make distclean && make ENABLE_Zbs=0 ENABLE_JIT=1 check -j$(nproc)
     - name: undefined behavior test
       run: |
             make clean && make ENABLE_UBSAN=1 check -j$(nproc)
